Handle no input on amount

--- a/TravelPlanner/res/layout/expense_adapter_layout.xml
+++ b/TravelPlanner/res/layout/expense_adapter_layout.xml
@@ -23,7 +23,7 @@
         android:layout_toRightOf="@+id/incompletenessIndicator"
         android:text="@string/holder"
         android:textAppearance="?android:attr/textAppearanceSmall"
-        android:textColor="@color/text" />
+        android:textColor="@color/title" />
 
     <ImageView
         android:id="@+id/imageViewExpenseAdapterStatus"
