--- a/TravelPlanner/res/layout/take_a_photo.xml
+++ b/TravelPlanner/res/layout/take_a_photo.xml
@@ -18,7 +18,7 @@
         android:id="@+id/expenseManagerPictureButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_above="@+id/textView2"
+        android:layout_above="@+id/textViewTags"
         android:layout_alignParentLeft="true"
         android:layout_alignParentRight="true"
         android:layout_below="@+id/moneySignText"
@@ -27,7 +27,7 @@
         android:src="@drawable/ic_launcher" />
 
     <TextView
-        android:id="@+id/textView2"
+        android:id="@+id/textViewTags"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignLeft="@+id/expenseManagerPictureButton"
@@ -40,7 +40,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
-        android:layout_alignTop="@+id/textView2"
+        android:layout_alignTop="@+id/textViewTags"
         android:layout_marginTop="21dp"
         android:text="Waiting..." />
 
