--- a/TravelPlanner/res/layout/claim_manager_layout.xml
+++ b/TravelPlanner/res/layout/claim_manager_layout.xml
@@ -103,19 +103,17 @@
 		    	android:orientation="horizontal"
 		    	android:layout_marginBottom="6dp"
 		    	android:layout_marginLeft="3dp"
-				>    
-			    
+				>
+
 				<TextView
 				    android:id="@+id/textViewDestinationsList"
-				    android:textColor="@color/text"
+				    android:layout_width="0px"
+				    android:layout_height="wrap_content"
 				    android:layout_marginBottom="3dp"
 				    android:layout_marginTop="3dp"
-				    android:layout_width="0px"
 				    android:layout_weight="0.8"
-				    android:layout_height="match_parent"
 				    android:background="@color/background_dark"
-				    android:color="@color/text"
-				    />
+				    android:textColor="@color/text" />
 
 				<Button
 				    android:id="@+id/buttonNewDestination"
