--- a/TravelPlanner/res/layout/expense_view_layout.xml
+++ b/TravelPlanner/res/layout/expense_view_layout.xml
@@ -179,7 +179,7 @@
 		            android:id="@+id/receiptViewatAdapter"
 		            android:layout_width="wrap_content"
 		            android:layout_height="wrap_content"
-		            android:src="@drawable/ic_launcher" />
+		            android:src="@drawable/ic_ayy" />
 						
 			</LinearLayout>
 	    </LinearLayout>
