--- a/TravelPlanner/res/layout/take_a_photo.xml
+++ b/TravelPlanner/res/layout/take_a_photo.xml
@@ -2,6 +2,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/background_dark"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
@@ -12,7 +13,8 @@
         android:id="@+id/moneySignText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Take a Photo" />
+        android:text="Take A photo of your receipt"
+        android:textColor="@color/text" />
 
     <ImageButton
         android:id="@+id/expenseManagerPictureButton"
@@ -33,7 +35,8 @@
         android:layout_alignLeft="@+id/expenseManagerPictureButton"
         android:layout_alignParentBottom="true"
         android:layout_marginBottom="132dp"
-        android:text="Result:" />
+        android:text="Result:"
+        android:textColor="@color/text" />
 
     <TextView
         android:id="@+id/textView3"
@@ -42,6 +45,7 @@
         android:layout_alignParentLeft="true"
         android:layout_alignTop="@+id/textViewTags"
         android:layout_marginTop="21dp"
-        android:text="Waiting..." />
+        android:text="Waiting..."
+        android:textColor="@color/text" />
 
 </RelativeLayout>
