--- a/TravelPlanner/res/layout/claim_manager_layout.xml
+++ b/TravelPlanner/res/layout/claim_manager_layout.xml
@@ -117,7 +117,6 @@
 
 				<Button
 				    android:id="@+id/buttonNewDestination"
-				    style="?android:attr/buttonStyleSmall"
 				    android:layout_width="0dp"
 				    android:layout_height="wrap_content"
 				    android:layout_weight="0.2"
@@ -131,23 +130,40 @@
 			    android:id="@+id/textViewTagTitle"
 			    android:layout_width="90dp"
 			    android:layout_height="wrap_content"
-			    android:text="Tags"
+			    android:text="@string/tags"
 			    android:textColor="@color/text" />
-
-			<TextView
-			    android:id="@+id/textViewTags"
+			
+			<LinearLayout
 			    android:layout_width="match_parent"
-			    android:layout_height="36dp"
-			    android:textColor="@color/text" />
+		    	android:layout_height="wrap_content"
+		    	android:orientation="horizontal"
+		    	android:layout_marginBottom="6dp"
+		    	android:layout_marginLeft="3dp"
+				>
+			
+				<TextView
+				    android:id="@+id/textViewTags"
+				    android:layout_width="0dp"
+				    android:layout_weight="0.8"
+				    android:layout_height="wrap_content"
+				    android:background="@color/background_dark"
+				    android:textColor="@color/text" />
+	
+				<Button
+				    android:id="@+id/addTags"
+				    android:layout_width="0dp"
+				    android:layout_weight="0.2"
+				    android:layout_height="wrap_content"
+				    android:onClick="addTag"
+				    android:textColor="@color/text" 
+				    android:text="@string/add" />
 
-			<Button
-			    android:id="@+id/addTags"
-			    android:layout_width="match_parent"
-			    android:layout_height="wrap_content"
-			    android:onClick="addTag"
-			    android:textColor="@color/text" 
-			    android:text="Add" />
-
+			</LinearLayout>
+			
+			
+			
+			
+			
 			<EditText
 			    android:id="@+id/editTextClaimDescription"
 			    android:layout_width="match_parent"
