problem setting description. work on dialog menu

--- a/TravelPlanner/res/layout/expense_view_layout.xml
+++ b/TravelPlanner/res/layout/expense_view_layout.xml
@@ -189,7 +189,9 @@
         android:id="@+id/buttonDoneExpenseItemView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/done"
         android:layout_alignParentBottom="true"
+        android:onClick="cancelClaim"
+        android:text="@string/done"
         android:textColor="@color/text" />
+
 </RelativeLayout>
