--- a/TravelPlanner/res/layout/approver_return_choice_dialog.xml
+++ b/TravelPlanner/res/layout/approver_return_choice_dialog.xml
@@ -1,7 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent" >
+    android:id="@+id/ReturnChoiceLayout"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:layout_alignParentLeft="true"
+    android:layout_alignParentTop="true" 
+    android:orientation="vertical"
+    android:background="@color/background_dark"
+    android:padding="1dp" >
 
     <TextView
         android:id="@+id/ApproverReturnChoiceText"
@@ -9,8 +15,9 @@
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
         android:layout_alignParentTop="true"
-        android:textSize="20sp"
-        android:text="@string/ApproverReturnText" />
+        android:textSize="15sp"
+        android:text="@string/ApproverReturnText"
+        android:textColor="@color/text" />
 
     <Button
         android:id="@+id/ButtonReturnCancel"
@@ -18,7 +25,9 @@
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
         android:layout_below="@+id/ApproverReturnChoiceText"
-        android:text="@string/ReturnCancel" />
+        android:text="@string/ReturnCancel"
+        android:textColor="@color/text"
+        android:textSize="12sp" />
 
     <Button
         android:id="@+id/ButtonReturnOk"
@@ -26,6 +35,8 @@
         android:layout_height="wrap_content"
         android:layout_alignRight="@+id/ApproverReturnChoiceText"
         android:layout_below="@+id/ApproverReturnChoiceText"
-        android:text="@string/ReturnOk" />
+        android:text="@string/ReturnOk"
+        android:textColor="@color/text"
+        android:textSize="12sp" />
 
 </RelativeLayout>
