--- a/TravelPlanner/res/layout/approver_comment_dialog.xml
+++ b/TravelPlanner/res/layout/approver_comment_dialog.xml
@@ -5,7 +5,7 @@
     android:layout_height="wrap_content"
     android:layout_alignParentLeft="true"
     android:layout_alignParentTop="true" 
-    android:orientation="vertical"
+    android:orientation="horizontal"
     android:background="@color/background_dark"
     android:padding="1dp" >
 
@@ -28,6 +28,7 @@
         android:layout_height="wrap_content"
         android:layout_alignBottom="@+id/ApproverCommentEditText"
         android:layout_alignParentTop="true"
+        android:layout_alignParentRight="true"
         android:layout_toRightOf="@+id/ApproverCommentEditText"
         android:text="@string/ButtonCommitApproverComment" />
 
