--- a/TravelPlanner/res/layout/claim_actionbar_layout.xml
+++ b/TravelPlanner/res/layout/claim_actionbar_layout.xml
@@ -3,18 +3,22 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/background_dark"
-   >
+    android:onClick="filterPopup" >
+
 		<LinearLayout 
 		    android:layout_height="match_parent"
 		    android:layout_width="match_parent"
 		    android:layout_alignParentTop="true"
 		    android:layout_alignParentLeft="true"
 		    android:orientation="horizontal">
-		    <Spinner
-		        android:id="@+id/spinnerClaimFilter"
+		    
+		    <Button
+		        android:id="@+id/ButtonClaimFilter"
 		        android:layout_width="0px"
+		        android:layout_height="match_parent"
 		        android:layout_weight="0.5"
-		        android:layout_height="match_parent"/>
+		        android:prompt="@string/search"
+		        android:text="@string/filter" />
 		    
 		    <LinearLayout
 		        android:layout_width="1dp"
