can now manage tags

--- a/TravelPlanner/res/layout/claim_actionbar_layout.xml
+++ b/TravelPlanner/res/layout/claim_actionbar_layout.xml
@@ -18,7 +18,7 @@
 		        android:layout_height="match_parent"
 		        android:layout_weight="0.5"
 		        android:prompt="@string/search"
-		        android:text="@string/filter" />
+		        android:text="@string/manageTags" />
 		    
 		    <LinearLayout
 		        android:layout_width="1dp"
