--- a/TravelPlanner/res/layout/claim_actionbar_layout.xml
+++ b/TravelPlanner/res/layout/claim_actionbar_layout.xml
@@ -16,17 +16,16 @@
 		        android:id="@+id/ButtonClaimFilter"
 		        android:layout_width="114dp"
 		        android:layout_height="match_parent"
+		        android:layout_weight="0.13"
 		        android:prompt="@string/search"
-		        android:text="@string/manageTags"
-		        android:textSize="14sp" />
+		        android:text="@string/manageTags" />
 		    
 		    <Button
 		        android:id="@+id/geo"
 		        android:layout_width="98dp"
 		        android:layout_height="match_parent"
 		        android:layout_weight="0.17"
-		        android:text="@string/geo"
-		        android:textSize="14dp" />
+		        android:text="@string/geo" />
 		    
 		    <LinearLayout
 		        android:layout_width="1dp"
@@ -34,26 +33,6 @@
 		        android:background="@color/background" >
 		        
 		    </LinearLayout>
-		
-		    <EditText
-		        android:id="@+id/editTextSearchClaims"
-		        android:layout_width="0px"
-		        android:layout_height="match_parent"
-		        android:layout_weight="0.59"
-		        android:ems="10"
-		        android:hint="@string/search"
-		        android:maxLength="255"
-		        android:maxLines="1"
-		        android:textColor="@color/text" >
-
-		        <requestFocus />
-		    </EditText>
-
-		    <ImageButton
-		        android:id="@+id/buttonSearchClaim"
-		        android:layout_width="wrap_content"
-		        android:layout_height="match_parent"
-		        android:src="@android:drawable/ic_menu_search" />
 		    
 		    
     </LinearLayout>
