--- a/TravelPlanner/res/layout/claim_manager_layout.xml
+++ b/TravelPlanner/res/layout/claim_manager_layout.xml
@@ -47,7 +47,7 @@
 				    android:layout_height="wrap_content"
 				    android:layout_weight="0.2"
 				    android:onClick="openStartDateDialog"
-				    android:contentDescription="StartDate"
+				    android:contentDescription="@string/end_date"
 				    android:src="@android:drawable/ic_menu_my_calendar" />
 				
 			</LinearLayout>
@@ -84,7 +84,7 @@
 				    android:layout_height="wrap_content"
 				    android:layout_weight="0.2"
 				    android:onClick="openEndDateDialog"
-				    android:contentDescription="End Date"
+				    android:contentDescription="@string/holder"
 				    android:src="@android:drawable/ic_menu_my_calendar" />
 				
 			</LinearLayout>
