--- a/TravelPlanner/res/layout/claimant_expense_dialog.xml
+++ b/TravelPlanner/res/layout/claimant_expense_dialog.xml
@@ -44,4 +44,12 @@
            android:text="@string/holder"
            android:textColor="@color/text" />
 
+       <Button
+           android:id="@+id/attachReceipt"
+           android:layout_width="match_parent"
+           android:layout_height="wrap_content"
+           android:text="@string/atch_Receipt"
+           android:textColor="@color/text"
+           android:textSize="12sp" />
+
    </LinearLayout>
