--- a/TravelPlanner/res/layout/expense_item_manager.xml
+++ b/TravelPlanner/res/layout/expense_item_manager.xml
@@ -106,7 +106,7 @@
 				    android:id="@+id/receiptImageHolder"
 				    android:layout_width="0dp"
 				    android:layout_height="wrap_content"
-				    android:layout_weight="0.2"
+				    android:layout_weight="0.8"
 				    android:src="@drawable/ic_ayy" />
 
 				<ImageButton
@@ -115,7 +115,9 @@
 				    android:layout_height="wrap_content"
 				    android:layout_weight="0.2"
 				    android:onClick="takePicture"
-				    android:src="@android:drawable/btn_star" />
+				    android:src="@android:drawable/ic_menu_camera" />
+
+				
 				
 			</LinearLayout>
 
@@ -159,7 +161,34 @@
 			    android:layout_height="wrap_content"
 			    android:textColor="@color/text"
 			    android:hint="@string/description"
-			    />	
+			    />
+			
+			<LinearLayout
+			    android:layout_width="match_parent"
+		    	android:layout_height="wrap_content"
+		    	android:orientation="horizontal"
+		    	android:layout_marginBottom="6dp"
+		    	android:layout_marginLeft="3dp"
+				>
+	
+					<TextView
+					    android:id="@+id/textViewExpenseLocation"
+					    android:layout_width="0dp"
+					    android:layout_height="wrap_content"
+					    android:layout_weight="0.8"
+					    android:src="@drawable/ic_ayy" />
+		
+					<ImageButton
+					    android:id="@+id/imageButtonLocationPicker"
+					    android:layout_width="0dp"
+					    android:layout_height="wrap_content"
+					    android:layout_weight="0.2"
+					    android:src="@android:drawable/ic_dialog_map"
+					    android:contentDescription="@string/holder"
+					     />
+					
+			</LinearLayout>
+		
 		</LinearLayout>
 	</ScrollView>
 	
@@ -190,5 +219,6 @@
 		    android:textColor="@color/text" />
 		
 	</LinearLayout>
+
 		
 </RelativeLayout>
