--- a/TravelPlanner/res/values/color.xml
+++ b/TravelPlanner/res/values/color.xml
@@ -5,5 +5,8 @@
 	<color name="text">#eeeeee</color>
 	<color name="title">#FFF000</color>
 	<color name="incomplete">#ff0000</color>
-	<color name="background_highlight">#888888</color>    
+	<color name="background_highlight">#888888</color>
+	<color name="location_close">#00FF00</color>
+	<color name="location_medium">#ffff00</color>
+	<color name="location_far">#FF0000</color>    
 </resources>
