--- a/TravelPlanner/res/layout/google_maps_layout.xml
+++ b/TravelPlanner/res/layout/google_maps_layout.xml
@@ -3,13 +3,10 @@
     android:layout_width="fill_parent" 
     android:layout_height="fill_parent">
  
-    <com.google.android.maps.MapView 
-        android:id="@+id/mapView"
-        android:layout_width="fill_parent"
-        android:layout_height="fill_parent"
-        android:enabled="true"
-        android:clickable="true"
-        android:apiKey="AIzaSyBkXD7UqakLlhXVw-fVFssCnfOfL0AujzE"
-        />
+<fragment
+    android:id="@+id/google_maps_layout"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    class="com.google.android.gms.maps.SupportMapFragment" />
  
 </RelativeLayout>
