Some more progress images are set

--- a/TravelPlanner/res/layout/expense_view_layout.xml
+++ b/TravelPlanner/res/layout/expense_view_layout.xml
@@ -176,7 +176,7 @@
 			    	>
 
 		        <ImageView
-		            android:id="@+id/receiptViewatAdapter"
+		            android:id="@+id/receiptViewatViewer"
 		            android:layout_width="wrap_content"
 		            android:layout_height="wrap_content"
 		            android:src="@drawable/ic_ayy" />
