--- a/TravelPlanner/res/layout/expense_item_manager.xml
+++ b/TravelPlanner/res/layout/expense_item_manager.xml
@@ -109,13 +109,13 @@
 				    android:layout_weight="0.2"
 				    android:src="@drawable/ic_ayy" />
 
-				<ImageButton
-				    android:id="@+id/expenseManagerPictureButton"
-				    android:layout_width="0dp"
+				<Button
+				    android:id="@+id/removeReceiptButton"
+				    android:layout_width="wrap_content"
 				    android:layout_height="wrap_content"
-				    android:layout_weight="0.2"
-				    android:onClick="takePicture"
-				    android:src="@android:drawable/btn_star" />
+				    android:onClick="removeReceipt"
+				    android:text="@string/remove"
+				    android:textColor="@color/text" />
 				
 			</LinearLayout>
 
