--- a/TravelPlanner/res/layout/expense_view_layout.xml
+++ b/TravelPlanner/res/layout/expense_view_layout.xml
@@ -37,7 +37,7 @@
 				    android:layout_width="match_parent"
 			    	android:layout_height="wrap_content"
 			    	android:orientation="horizontal"
-			    	android:layout_marginLeft="3dp"
+			    	android:layout_marginStart="3dp"
 			    	android:layout_marginBottom="9dp"
 			    	android:background="@color/background_dark"
 			    	>    
@@ -66,7 +66,7 @@
 				    android:layout_width="match_parent"
 			    	android:layout_height="wrap_content"
 			    	android:orientation="horizontal"
-			    	android:layout_marginLeft="3dp"
+			    	android:layout_marginStart="3dp"
 			    	android:layout_marginBottom="9dp"
 			    	android:background="@color/background_dark"
 			    	>    
@@ -95,7 +95,7 @@
 				    android:layout_width="match_parent"
 			    	android:layout_height="wrap_content"
 			    	android:orientation="horizontal"
-			    	android:layout_marginLeft="3dp"
+			    	android:layout_marginStart="3dp"
 			    	android:layout_marginBottom="9dp"
 			    	android:background="@color/background_dark"
 			    	>
@@ -140,7 +140,7 @@
 				    android:layout_width="match_parent"
 			    	android:layout_height="wrap_content"
 			    	android:orientation="horizontal"
-			    	android:layout_marginLeft="3dp"
+			    	android:layout_marginStart="3dp"
 			    	android:layout_marginBottom="6dp"
 			    	android:background="@color/background_dark"
 			    	>    
@@ -170,7 +170,7 @@
 				    android:layout_width="match_parent"
 			    	android:layout_height="wrap_content"
 			    	android:orientation="horizontal"
-			    	android:layout_marginLeft="3dp"
+			    	android:layout_marginStart="3dp"
 			    	android:layout_marginBottom="9dp"
 			    	android:background="@color/background_dark"
 			    	>
