--- a/TravelPlanner/res/layout/expense_item_manager.xml
+++ b/TravelPlanner/res/layout/expense_item_manager.xml
@@ -121,7 +121,7 @@
 
 			<TextView
 			    android:layout_width="match_parent"
-			    android:layout_height="wrap_content"
+			    android:layout_height="0dp"
 			    android:layout_marginStart="3dp"
 			    android:layout_weight="1"
 			    android:text="@string/Amount"
@@ -133,7 +133,7 @@
 
 				<EditText
 				    android:id="@+id/editTextAmount"
-				    android:layout_width="wrap_content"
+				    android:layout_width="0dp"
 				    android:layout_height="wrap_content"
 				    android:layout_weight="1"
 				    android:ems="10"
