Finished geo location. Kind of. It's entirely functional

--- a/TravelPlanner/res/layout/map_search_alert_dialog.xml
+++ b/TravelPlanner/res/layout/map_search_alert_dialog.xml
@@ -11,7 +11,7 @@
         android:layout_alignParentLeft="true"
         android:layout_alignParentTop="true"
         android:layout_toLeftOf="@+id/imageButtonSearchMap"
-        android:alpha="0.85"
+        android:hint="@string/search"
         android:ems="10" >
 
         <requestFocus />
@@ -24,11 +24,11 @@
         android:layout_alignParentRight="true"
         android:layout_alignParentTop="true"
         android:src="@android:drawable/ic_menu_search" 
-        android:alpha="0.85"
+        android:contentDescription="@string/hello_world"
         />
     
     <fragment
-	    android:id="@+id/google_map"
+	    android:id="@+id/google_map_search"
 	    android:layout_width="match_parent"
 	    android:layout_height="wrap_content"
 	    android:layout_below="@+id/editTextMapSearch"
@@ -41,10 +41,10 @@
 	    android:layout_height="wrap_content"
 	    android:orientation="horizontal"
 	    android:layout_alignParentBottom="true"
-	    android:alpha="0.75"   
 	    >
 		
 		<Button
+		    style="?android:attr/buttonBarButtonStyle"
 		    android:id="@+id/buttonAddLocation"
 		    android:layout_width="0px"
 		    android:layout_weight="0.5"
@@ -52,6 +52,7 @@
 		    android:text="@string/add_location" />
 		
 		<Button
+		    style="?android:attr/buttonBarButtonStyle"
 		    android:id="@+id/buttonCloseMaps"
 		    android:layout_width="0px"
 		    android:layout_weight="0.5"
