--- a/TravelPlanner/res/layout/claim_manager_layout.xml
+++ b/TravelPlanner/res/layout/claim_manager_layout.xml
@@ -108,7 +108,7 @@
 				<ListView
 				    android:id="@+id/listViewDestinations"
 				    android:layout_width="0px"
-				    android:layout_height="wrap_content"
+				    android:layout_height="100dp"
 				    android:layout_marginBottom="3dp"
 				    android:layout_marginTop="3dp"
 				    android:layout_weight="0.8"
