--- a/TravelPlanner/res/layout/destination_dialog_layout.xml
+++ b/TravelPlanner/res/layout/destination_dialog_layout.xml
@@ -41,7 +41,9 @@
 			        android:layout_width="match_parent"
 			        android:hint="@string/destination_singular"
 			        android:singleLine="true"
-			        android:textColor="@color/text" />
+			        android:textColor="@color/text" >
+			        <requestFocus />
+			        </EditText>
 
     
 			    <EditText
