--- a/TravelPlanner/res/layout/claimant_location_picker_dialog.xml
+++ b/TravelPlanner/res/layout/claimant_location_picker_dialog.xml
@@ -19,6 +19,13 @@
            android:textSize="12sp"
            android:text="@string/home_location" />
 
+		<Button
+           android:id="@+id/buttonGPSLocation"
+           android:layout_width="match_parent"
+           android:layout_height="wrap_content"
+           android:textSize="12sp"
+           android:text="@string/gps_location" />
+       
        <Button
            android:id="@+id/buttonNewMapLocation"
            android:layout_width="match_parent"
