--- a/TravelPlanner/res/layout/claim_manager_layout.xml
+++ b/TravelPlanner/res/layout/claim_manager_layout.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout
+    	xmlns:tools="http://schemas.android.com/tools"
     	xmlns:android="http://schemas.android.com/apk/res/android"
 	    android:layout_width="match_parent"
 	    android:layout_height="match_parent"
@@ -106,6 +107,7 @@
 				>
 
 				<ListView
+				    tools:ignore="NestedScrolling"
 				    android:id="@+id/listViewDestinations"
 				    android:layout_width="0px"
 				    android:layout_height="100dp"
